...
    <string name="error_password_short">The password must be more than 6 character long.</string>
    <string name="error_password_long">The password must be less than 63 character long.</string>
    <string name="error_actual_password_missing">To edit your password, you have to enter your actual password !</string>
    <string name="error_actual_password_incorrect">Your actual password is incorrect !</string>
    <string name="error_actual_password_correct">Your actual password is correct !</string>
    <string name="error_username_long">The username must be less than 63 character long.</string>
    <string name="error_email_valid">You must enter a valid email adress.</string>
    <string name="error_firstname_notset">You must tell your firstname.</string>
    <string name="error_lastname_notset">You must tell your last name.</string>
    <string name="error_phone_valid">You must enter a valid phone number.</string>
    <string name="success_account_created">Your account is created. You can log in now.</string>
    <string name="success_profile_edit">Your profile has been edit. You can look your new information on the profile page.</string>
    <string name="error_username_exists">This username already exists. Please chose another one.</string>
    <string name="txt_title_profile">Get A Lift - Profile</string>
    <string name="txt_title_drive">Get A Lift - Drive</string>
    <string name="txt_title_result_search">Available drives</string>
...
    <string name="btn_create_route">I want to drive</string>
    <string name="btn_create_ride">Create</string>
    <string name="btn_edit_ride">Edit</string>
    <string name="txt_title_help">Get A Lift - Help</string>
    <string name="txt_title_faq">Get A Lift - F.A.Q</string>
    <string name="txt_title_about">Get A Lift - About</string>
    <string name="text_title_contact_us">Get A Lift - Contact Us</string>
    <string name="text_title_settings">Get A Lift - Settings</string>

    <!-- Strings related to error for Contact US page -->
    <string name="error_name_long">The name must be less than 63 character long.</string>
    <string name="error_name_short">The name must be more than 5 character long.</string>
    <string name="error_surname_long">The surname must be less than 63 character long.</string>
    <string name="error_surname_short">The surname must be more than 5 character long.</string>
    <string name="error_message_long">The message must be less than 500 character long.</string>
    <string name="error_message_short">The message must be more than 20 character long.</string>
    <string name="error_message_20_long">The message must be less than 100 character long.</string>
    <string name="error_message_20_short">The message must be more than 20 character long.</string>
...
